--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="banner">
       <h3 class="banner-subtitle">Over one hundred flavors of tea</h3>
       <h1 class="banner-title">Specially crafted tea</h1>
-      <a href="skills.html" target="_blank" class="banner-btn">explore</a>
+      <a href="skills.html" class="banner-btn">explore</a>
     </div>
     </header>
     <!--end header-->
@@ -119,7 +119,7 @@
                 <!-- end of section title -->
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolores.</p>
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolores.</p>
-                <a href="about.html" class="main-btn" target="_blank">Learn more</a>
+                <a href="about.html" class="main-btn">Learn more</a>
             </article>
         </div>
     </section>
