--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
     <div class="banner">
       <h3 class="banner-subtitle">Over one hundred flavors of tea</h3>
       <h1 class="banner-title">Specially crafted tea</h1>
-      <a href="skills.html" target="_blank" class="banner-btn">explore</a>
+      <a href="skills.html" class="banner-btn">explore</a>
     </div>
     </header>
     <!--end header-->
