--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/png" href="tea.png">
     <title>Tea Station Recording</title>
     <!-- font awesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.7.2-web 2/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <!--link rel="stylesheet" href="fontawesome-free-5.7.2-web 2/css/all.css"-->
     <!-- custom css -->
     <link rel="stylesheet" href="styles.css">
   </head>
